--- a/bricks/ai/package.json
+++ b/bricks/ai/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@antv/g2": "^5.1.19",
     "@microsoft/fetch-event-source": "^2.0.1",
+    "@next-api-sdk/cmdb-sdk": "^1.1.1",
     "@next-core/element": "^1.2.13",
     "@next-core/i18n": "^1.0.69",
     "@next-core/react-element": "^1.0.32",
@@ -44,6 +45,7 @@
     "@next-core/runtime": "^1.56.0",
     "@next-core/theme": "^1.5.4",
     "@next-core/utils": "^1.7.27",
+    "js-yaml": "^3.14.1",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
   "devDependencies": {
