fix(): refine cel language

--- a/bricks/vs/package.json
+++ b/bricks/vs/package.json
@@ -46,7 +46,7 @@
   "scripts": {
     "prestart": "node ./scripts/pre-build.js",
     "start": "cross-env NODE_ENV=development build-next-bricks --watch",
-    "prebuild": "node ./scripts/pre-build.js",
+    "prebuild:main": "node ./scripts/pre-build.js",
     "build": "npm run build:main && npm run build:types",
     "build:main": "cross-env NODE_ENV=production build-next-bricks",
     "build:types": "tsc --emitDeclarationOnly --declaration --declarationDir dist-types --project tsconfig.json",
