--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -69,5 +69,8 @@
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.4",
     "@next-core/test-next": "^1.1.7"
+  },
+  "peerDependencies": {
+    "@next-bricks/icons": "*"
   }
 }
