--- a/netlify.toml
+++ b/netlify.toml
@@ -42,3 +42,13 @@
   for = "*.map"
   [headers.values]
     Cache-Control = "public, max-age=604800"
+
+[[headers]]
+  for = "*.mp4"
+  [headers.values]
+    Cache-Control = "public, max-age=604800"
+
+[[headers]]
+  for = "*.webm"
+  [headers.values]
+    Cache-Control = "public, max-age=604800"
