--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -46,6 +46,7 @@
     "@next-shared/general": "^0.9.12",
     "@tweenjs/tween.js": "^19.0.0",
     "classnames": "^2.3.2",
+    "d3-force": "^3.0.0",
     "d3-hierarchy": "^3.1.2",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "resize-observer-polyfill": "^1.5.1",
