--- a/shared/general/package.json
+++ b/shared/general/package.json
@@ -34,6 +34,11 @@
       "import": "./dist/esm/makeThrottledAggregation.js",
       "require": "./dist/cjs/makeThrottledAggregation.js"
     },
+    "./smartDisplayForEvaluableString": {
+      "types": "./dist/types/smartDisplayForEvaluableString.d.ts",
+      "import": "./dist/esm/smartDisplayForEvaluableString.js",
+      "require": "./dist/cjs/smartDisplayForEvaluableString.js"
+    },
     "./types": {
       "types": "./dist/types/types.d.ts"
     },
@@ -53,7 +58,10 @@
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next"
   },
   "dependencies": {
+    "@babel/types": "^7.22.5",
+    "@next-core/cook": "^2.5.3",
     "@next-core/runtime": "^1.58.1",
+    "@next-core/utils": "^1.7.28",
     "history": "^4.7.11"
   },
   "devDependencies": {
