--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -57,6 +57,7 @@
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
+    "@next-bricks/basic": "*",
     "@next-bricks/icons": "*"
   }
 }
