--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -47,6 +47,7 @@
     "@tweenjs/tween.js": "^19.0.0",
     "classnames": "^2.3.2",
     "d3-force": "^3.0.0",
+    "d3-geo": "^3.1.1",
     "d3-hierarchy": "^3.1.2",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "resize-observer-polyfill": "^1.5.1",
