--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@next-core/test-next": "^1.1.7",
     "@next-core/yo": "^1.5.87",
     "@types/d3-force": "^3.0.9",
+    "@types/d3-geo": "^3.1.0",
     "@types/d3-hierarchy": "^3.1.2",
     "@types/d3-selection": "^3.0.10",
     "@types/d3-shape": "^3.1.6",
