--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -43,16 +43,19 @@
     "@next-core/element": "^1.2.14",
     "@next-core/http": "^1.2.9",
     "@next-core/i18n": "^1.0.71",
+    "@next-core/pipes": "^2.0.28",
     "@next-core/react-element": "^1.0.33",
     "@next-core/react-runtime": "^1.7.5",
     "@next-core/runtime": "^1.58.3",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
+    "@next-core/utils": "^1.7.29",
     "@next-shared/general": "^0.10.2",
     "@next-shared/story": "^0.0.4",
     "broadcast-channel": "^7.0.0",
     "classnames": "^2.3.2",
     "dompurify": "^3.1.6",
+    "history": "^4.10.1",
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117"
   },
