--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -43,15 +43,15 @@
     "@dnd-kit/utilities": "^3.2.1",
     "@next-core/element": "^1.2.15",
     "@next-core/http": "^1.2.10",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
     "@react-pdf-viewer/core": "^3.12.0",
     "@react-pdf-viewer/default-layout": "^3.12.0",
     "@react-pdf-viewer/page-navigation": "^3.12.0",
-    "antd": "^5.22.1",
+    "antd": "^5.23.0",
     "classnames": "^2.3.2",
     "html2canvas": "^1.4.1",
     "immutability-helper": "^3.1.1",
@@ -62,10 +62,11 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
+    "react-i18next": "^12.3.1",
     "react-grid-layout": "^1.4.3"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7",
     "copy-webpack-plugin": "^12.0.2"
   },
