--- a/bricks/ai/package.json
+++ b/bricks/ai/package.json
@@ -39,10 +39,10 @@
     "@microsoft/fetch-event-source": "^2.0.1",
     "@next-api-sdk/cmdb-sdk": "^1.1.1",
     "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^2.0.1-alpha.0",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/theme": "^1.5.4",
     "@next-core/utils": "^1.7.30",
     "js-yaml": "^3.14.1",
@@ -55,7 +55,7 @@
     "@milkdown/preset-gfm": "^7.3.5",
     "@milkdown/react": "^7.3.5",
     "@milkdown/theme-nord": "^7.3.5",
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
