--- a/bricks/basic/package.json
+++ b/bricks/basic/package.json
@@ -42,10 +42,10 @@
     "@next-api-sdk/user-service-sdk": "^1.3.0",
     "@next-core/element": "^1.2.15",
     "@next-core/http": "^1.2.10",
-    "@next-core/i18n": "^2.0.1-alpha.0",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
     "@next-shared/general": "^0.10.5",
@@ -58,7 +58,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
