--- a/bricks/containers/package.json
+++ b/bricks/containers/package.json
@@ -36,9 +36,9 @@
   },
   "dependencies": {
     "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^2.0.1-alpha.0",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/types": "^1.14.0",
     "@next-core/utils": "^1.7.30",
     "@next-shared/story": "^0.0.4",
@@ -47,7 +47,7 @@
     "react-rnd": "^10.4.1"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
