--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -38,9 +38,9 @@
     "@antv/l7": "2.22.0",
     "@antv/l7-maps": "2.22.0",
     "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^2.0.1-alpha.0",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
     "@next-core/types": "^1.14.0",
     "@next-core/utils": "^1.7.30",
     "@next-shared/general": "^0.10.5",
@@ -54,7 +54,7 @@
     "three": "^0.150.1"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
