--- a/bricks/diagram/package.json
+++ b/bricks/diagram/package.json
@@ -39,13 +39,13 @@
     "@dagrejs/dagre": "^1.1.3",
     "@next-api-sdk/cmdb-sdk": "^1.1.1",
     "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^2.0.1-alpha.0",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/theme": "^1.5.4",
     "@next-core/utils": "^1.7.30",
-    "antd": "^5.22.1",
+    "antd": "^5.23.0",
     "classnames": "^2.3.2",
     "d3-drag": "^3.0.0",
     "d3-force": "^3.0.0",
@@ -57,7 +57,7 @@
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
