--- a/bricks/form-renderer/package.json
+++ b/bricks/form-renderer/package.json
@@ -36,10 +36,10 @@
   },
   "dependencies": {
     "@next-core/element": "^1.2.15",
-    "@next-core/runtime": "^1.59.2-alpha.0"
+    "@next-core/runtime": "^1.59.1-beta.0"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   }
 }
