--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -40,15 +40,15 @@
     "@easyops-cn/rc-trigger": "^2.2.1",
     "@next-core/element": "^1.2.15",
     "@next-core/http": "^1.2.10",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
     "@next-shared/form": "^0.7.7",
     "@next-shared/hooks": "^0.0.15",
     "@next-shared/story": "^0.0.4",
-    "antd": "^5.22.1",
+    "antd": "^5.23.0",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.10",
     "lodash": "^4.17.21",
@@ -59,7 +59,7 @@
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
