--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -59,15 +59,15 @@
   "dependencies": {
     "@next-core/element": "^1.2.15",
     "@next-core/illustrations": "^0.11.34",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
     "@next-core/types": "^1.14.0",
     "@next-core/utils": "^1.7.30",
     "lodash": "^4.17.21",
     "react": "^19.0.0"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
