--- a/bricks/inject/package.json
+++ b/bricks/inject/package.json
@@ -36,7 +36,7 @@
   },
   "dependencies": {
     "@next-core/http": "^1.2.10",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/storyboard": "^0.6.17",
     "@next-core/types": "^1.14.0",
     "@next-core/utils": "^1.7.30",
@@ -44,7 +44,7 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   }
 }
