--- a/bricks/markdown/package.json
+++ b/bricks/markdown/package.json
@@ -60,7 +60,7 @@
     "refractor": "^4.8.1"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
