--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -39,12 +39,12 @@
     "@next-api-sdk/micro-app-standalone-sdk": "^1.1.1",
     "@next-api-sdk/sys-setting-sdk": "^1.1.1",
     "@next-api-sdk/user-service-sdk": "^1.3.0",
-    "@next-core/easyops-runtime": "^0.13.2-alpha.0",
+    "@next-core/easyops-runtime": "^0.13.1-beta.0",
     "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^2.0.1-alpha.0",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
     "@next-core/utils": "^1.7.30",
@@ -57,7 +57,7 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
