--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -36,9 +36,9 @@
   },
   "dependencies": {
     "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^2.0.1-alpha.0",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
     "@next-core/types": "^1.14.0",
     "@next-core/utils": "^1.7.30",
     "@next-shared/datetime": "^0.2.12",
@@ -51,7 +51,7 @@
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7",
     "babel-plugin-prismjs": "^2.1.0"
   },
