--- a/bricks/recent-history/package.json
+++ b/bricks/recent-history/package.json
@@ -36,15 +36,15 @@
   },
   "dependencies": {
     "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^2.0.1-alpha.0",
-    "@next-core/react-element": "^2.0.0-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
     "@next-core/theme": "^1.5.4",
     "@next-shared/general": "^0.10.5",
     "mnemonist": "^0.39.5",
     "react": "^19.0.0"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
