--- a/bricks/shoelace/package.json
+++ b/bricks/shoelace/package.json
@@ -50,7 +50,7 @@
     "@shoelace-style/shoelace": "~2.18.0"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "copy-webpack-plugin": "^11.0.0"
   }
 }
