--- a/bricks/v2-adapter/package.json
+++ b/bricks/v2-adapter/package.json
@@ -30,13 +30,13 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-core/easyops-runtime": "^0.13.2-alpha.0",
+    "@next-core/easyops-runtime": "^0.13.1-beta.0",
     "@next-core/element": "^1.2.15",
     "@next-core/http": "^1.2.10",
-    "@next-core/i18n": "^2.0.1-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
     "@next-core/loader": "^1.6.12",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/theme": "^1.5.4",
     "@next-core/utils": "^1.7.30",
     "history": "^4.10.1",
@@ -46,7 +46,7 @@
   },
   "devDependencies": {
     "@next-core/brick-dll-v3": "^0.8.20",
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/styles-v3": "^0.3.5",
     "@next-core/test-next": "^1.1.7",
     "@next-dll/ace": "^2.0.772",
