--- a/bricks/vb-experiment/package.json
+++ b/bricks/vb-experiment/package.json
@@ -43,6 +43,6 @@
     "process": "^0.11.10"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0"
+    "@next-core/build-next-bricks": "^1.23.8"
   }
 }
