--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -43,9 +43,9 @@
     "@next-api-sdk/next-builder-sdk": "^1.2.2",
     "@next-core/element": "^1.2.15",
     "@next-core/http": "^1.2.10",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/storyboard": "^0.6.17",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
@@ -60,7 +60,7 @@
     "react": "^19.0.0"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7"
   },
   "peerDependencies": {
