--- a/bricks/vs/package.json
+++ b/bricks/vs/package.json
@@ -61,8 +61,8 @@
     "@next-core/cook": "^2.5.5",
     "@next-core/element": "^1.2.15",
     "@next-core/monaco-contributions": "^0.3.13",
-    "@next-core/react-element": "^2.0.0-alpha.0",
-    "@next-core/react-runtime": "^2.0.2-alpha.0",
+    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/react-runtime": "^2.0.0-beta.0",
     "@next-core/theme": "^1.5.4",
     "@next-core/utils": "^1.7.30",
     "@next-shared/form": "^0.7.7",
@@ -72,7 +72,7 @@
     "yaml": "^2.5.1"
   },
   "devDependencies": {
-    "@next-core/build-next-bricks": "^2.0.0-alpha.0",
+    "@next-core/build-next-bricks": "^1.23.8",
     "@next-core/test-next": "^1.1.7",
     "resize-observer-polyfill": "^1.5.1"
   },
