--- a/package.json
+++ b/package.json
@@ -46,13 +46,13 @@
   "devDependencies": {
     "@cypress/browserify-preprocessor": "^3.0.2",
     "@next-core/babel-preset-next": "^1.0.23",
-    "@next-core/brick-container": "^3.20.2-alpha.0",
-    "@next-core/brick-playground": "^1.15.50-alpha.0",
+    "@next-core/brick-container": "^3.20.1-beta.0",
+    "@next-core/brick-playground": "^1.15.49-beta.0",
     "@next-core/browserslist-config-next": "^1.1.2",
     "@next-core/eslint-config-next": "^2.0.25",
-    "@next-core/preview": "^0.7.49-alpha.0",
+    "@next-core/preview": "^0.7.48-beta.0",
     "@next-core/test-next": "^1.1.7",
-    "@next-core/yo": "^2.0.2-alpha.0",
+    "@next-core/yo": "^2.0.0-beta.0",
     "@types/d3-force": "^3.0.9",
     "@types/d3-geo": "^3.1.0",
     "@types/d3-hierarchy": "^3.1.2",
