--- a/shared/datetime/package.json
+++ b/shared/datetime/package.json
@@ -35,7 +35,7 @@
     "test:ci": "cross-env NODE_ENV='test' CI=true test-next"
   },
   "dependencies": {
-    "@next-core/i18n": "^2.0.1-alpha.0",
+    "@next-core/i18n": "^1.0.73-beta.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4"
   },
