--- a/shared/general/package.json
+++ b/shared/general/package.json
@@ -60,7 +60,7 @@
   "dependencies": {
     "@babel/types": "^7.22.5",
     "@next-core/cook": "^2.5.5",
-    "@next-core/runtime": "^1.59.2-alpha.0",
+    "@next-core/runtime": "^1.59.1-beta.0",
     "@next-core/utils": "^1.7.30",
     "history": "^4.7.11"
   },
