--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -41,11 +41,11 @@
     "@dnd-kit/modifiers": "^6.0.1",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
-    "@next-core/element": "^1.2.15",
-    "@next-core/http": "^1.2.10",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/react-runtime": "^2.0.0-beta.0",
-    "@next-core/runtime": "^1.59.1-beta.0",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/http": "^1.2.11-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/react-runtime": "^2.0.0-beta.1",
+    "@next-core/runtime": "^1.59.1-beta.1",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
     "@react-pdf-viewer/core": "^3.12.0",
@@ -67,7 +67,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7",
+    "@next-core/test-next": "^1.1.8-beta.0",
     "copy-webpack-plugin": "^12.0.2"
   },
   "peerDependencies": {
