--- a/bricks/ai/package.json
+++ b/bricks/ai/package.json
@@ -38,13 +38,13 @@
     "@antv/g2": "^5.1.19",
     "@microsoft/fetch-event-source": "^2.0.1",
     "@next-api-sdk/cmdb-sdk": "^1.1.1",
-    "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^1.0.73-beta.0",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/react-runtime": "^2.0.0-beta.0",
-    "@next-core/runtime": "^1.59.1-beta.0",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/i18n": "^1.0.73-beta.1",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/react-runtime": "^2.0.0-beta.1",
+    "@next-core/runtime": "^1.59.1-beta.1",
     "@next-core/theme": "^1.5.4",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/utils": "^1.7.31-beta.0",
     "js-yaml": "^3.14.1",
     "react": "^19.0.0"
   },
@@ -56,7 +56,7 @@
     "@milkdown/react": "^7.3.5",
     "@milkdown/theme-nord": "^7.3.5",
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*",
