--- a/bricks/containers/package.json
+++ b/bricks/containers/package.json
@@ -35,12 +35,12 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^1.0.73-beta.0",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/runtime": "^1.59.1-beta.0",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/i18n": "^1.0.73-beta.1",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/runtime": "^1.59.1-beta.1",
     "@next-core/types": "^1.14.0",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/utils": "^1.7.31-beta.0",
     "@next-shared/story": "^0.0.4",
     "classnames": "^2.3.2",
     "react": "^19.0.0",
@@ -48,7 +48,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*"
