--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -37,12 +37,12 @@
   "dependencies": {
     "@antv/l7": "2.22.0",
     "@antv/l7-maps": "2.22.0",
-    "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^1.0.73-beta.0",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/react-runtime": "^2.0.0-beta.0",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/i18n": "^1.0.73-beta.1",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/react-runtime": "^2.0.0-beta.1",
     "@next-core/types": "^1.14.0",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/utils": "^1.7.31-beta.0",
     "@next-shared/general": "^0.10.5",
     "@tweenjs/tween.js": "^19.0.0",
     "classnames": "^2.3.2",
@@ -55,7 +55,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*",
