--- a/bricks/diagram/package.json
+++ b/bricks/diagram/package.json
@@ -38,13 +38,13 @@
     "@ant-design/cssinjs": "^1.22.0",
     "@dagrejs/dagre": "^1.1.3",
     "@next-api-sdk/cmdb-sdk": "^1.1.1",
-    "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^1.0.73-beta.0",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/react-runtime": "^2.0.0-beta.0",
-    "@next-core/runtime": "^1.59.1-beta.0",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/i18n": "^1.0.73-beta.1",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/react-runtime": "^2.0.0-beta.1",
+    "@next-core/runtime": "^1.59.1-beta.1",
     "@next-core/theme": "^1.5.4",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/utils": "^1.7.31-beta.0",
     "antd": "^5.23.0",
     "classnames": "^2.3.2",
     "d3-drag": "^3.0.0",
@@ -58,7 +58,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*"
