--- a/bricks/form-renderer/package.json
+++ b/bricks/form-renderer/package.json
@@ -35,11 +35,11 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-core/element": "^1.2.15",
-    "@next-core/runtime": "^1.59.1-beta.0"
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/runtime": "^1.59.1-beta.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   }
 }
