--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -38,11 +38,11 @@
     "@ant-design/cssinjs": "^1.22.0",
     "@ant-design/icons": "^5.5.1",
     "@easyops-cn/rc-trigger": "^2.2.1",
-    "@next-core/element": "^1.2.15",
-    "@next-core/http": "^1.2.10",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/react-runtime": "^2.0.0-beta.0",
-    "@next-core/runtime": "^1.59.1-beta.0",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/http": "^1.2.11-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/react-runtime": "^2.0.0-beta.1",
+    "@next-core/runtime": "^1.59.1-beta.1",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
     "@next-shared/form": "^0.7.7",
@@ -60,7 +60,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*",
