--- a/bricks/icons/package.json
+++ b/bricks/icons/package.json
@@ -76,17 +76,17 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
-    "@next-core/element": "^1.2.15",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/runtime": "^1.59.1-beta.0",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/runtime": "^1.59.1-beta.1",
+    "@next-core/utils": "^1.7.31-beta.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7",
+    "@next-core/test-next": "^1.1.8-beta.0",
     "@next-shared/icons": "^0.14.1",
     "copy-webpack-plugin": "^11.0.0"
   }
