--- a/bricks/illustrations/package.json
+++ b/bricks/illustrations/package.json
@@ -57,18 +57,18 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-core/element": "^1.2.15",
+    "@next-core/element": "^1.2.16-beta.0",
     "@next-core/illustrations": "^0.11.34",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/react-runtime": "^2.0.0-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/react-runtime": "^2.0.0-beta.1",
     "@next-core/types": "^1.14.0",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/utils": "^1.7.31-beta.0",
     "lodash": "^4.17.21",
     "react": "^19.0.0"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   },
   "peerDependencies": {
     "@next-bricks/icons": "*"
