--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -39,15 +39,15 @@
     "@next-api-sdk/micro-app-standalone-sdk": "^1.1.1",
     "@next-api-sdk/sys-setting-sdk": "^1.1.1",
     "@next-api-sdk/user-service-sdk": "^1.3.0",
-    "@next-core/easyops-runtime": "^0.13.1-beta.0",
-    "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^1.0.73-beta.0",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/react-runtime": "^2.0.0-beta.0",
-    "@next-core/runtime": "^1.59.1-beta.0",
+    "@next-core/easyops-runtime": "^0.13.1-beta.1",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/i18n": "^1.0.73-beta.1",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/react-runtime": "^2.0.0-beta.1",
+    "@next-core/runtime": "^1.59.1-beta.1",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/utils": "^1.7.31-beta.0",
     "@next-shared/general": "^0.10.5",
     "classnames": "^2.3.2",
     "hotkeys-js": "^3.10.1",
@@ -58,7 +58,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*",
