--- a/bricks/recent-history/package.json
+++ b/bricks/recent-history/package.json
@@ -35,9 +35,9 @@
     "postpublish": "mv package.json.bak package.json"
   },
   "dependencies": {
-    "@next-core/element": "^1.2.15",
-    "@next-core/i18n": "^1.0.73-beta.0",
-    "@next-core/react-element": "^2.0.0-beta.0",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/i18n": "^1.0.73-beta.1",
+    "@next-core/react-element": "^2.0.0-beta.1",
     "@next-core/theme": "^1.5.4",
     "@next-shared/general": "^0.10.5",
     "mnemonist": "^0.39.5",
@@ -45,7 +45,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*"
