--- a/bricks/vb-experiment/package.json
+++ b/bricks/vb-experiment/package.json
@@ -36,7 +36,7 @@
     "@babel/standalone": "^7.22.9",
     "@babel/types": "^7.22.5",
     "@next-core/types": "^1.14.0",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/utils": "^1.7.31-beta.0",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "prettier": "^3.3.3",
