--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -41,15 +41,15 @@
     "@formily/react": "^2.3.1",
     "@formily/reactive": "^2.3.1",
     "@next-api-sdk/next-builder-sdk": "^1.2.2",
-    "@next-core/element": "^1.2.15",
-    "@next-core/http": "^1.2.10",
-    "@next-core/react-element": "^2.0.0-beta.0",
-    "@next-core/react-runtime": "^2.0.0-beta.0",
-    "@next-core/runtime": "^1.59.1-beta.0",
+    "@next-core/element": "^1.2.16-beta.0",
+    "@next-core/http": "^1.2.11-beta.0",
+    "@next-core/react-element": "^2.0.0-beta.1",
+    "@next-core/react-runtime": "^2.0.0-beta.1",
+    "@next-core/runtime": "^1.59.1-beta.1",
     "@next-core/storyboard": "^0.6.17",
     "@next-core/theme": "^1.5.4",
     "@next-core/types": "^1.14.0",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/utils": "^1.7.31-beta.0",
     "@next-shared/general": "^0.10.5",
     "@next-shared/markdown": "^0.2.5",
     "classnames": "^2.3.2",
@@ -61,7 +61,7 @@
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.8",
-    "@next-core/test-next": "^1.1.7"
+    "@next-core/test-next": "^1.1.8-beta.0"
   },
   "peerDependencies": {
     "@next-bricks/basic": "*",
