--- a/shared/general/package.json
+++ b/shared/general/package.json
@@ -60,13 +60,13 @@
   "dependencies": {
     "@babel/types": "^7.22.5",
     "@next-core/cook": "^2.5.5",
-    "@next-core/runtime": "^1.59.1-beta.0",
-    "@next-core/utils": "^1.7.30",
+    "@next-core/runtime": "^1.59.1-beta.1",
+    "@next-core/utils": "^1.7.31-beta.0",
     "history": "^4.7.11"
   },
   "devDependencies": {
     "@next-core/build-next-libs": "^1.0.22",
-    "@next-core/test-next": "^1.1.7",
+    "@next-core/test-next": "^1.1.8-beta.0",
     "concurrently": "^9.1.0"
   }
 }
