--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -99,11 +99,12 @@ jobs:
           bricks/*/src/**/example.yaml
           bricks/*/src/**/example.html
           netlify.toml
-          !*.map
+          !**/*.map
           !bricks/v2-adapter
           !bricks/ui-test
           !bricks/vb-experiment
           !bricks/form-renderer
+          !bricks/*/dist/stories-assets/**
         retention-days: 90
 
   build_docs:
