fix(): add missing deprecated-bricks.json [skip ci]

--- a/shared/common-bricks/package.json
+++ b/shared/common-bricks/package.json
@@ -11,7 +11,8 @@
   "sideEffects": false,
   "type": "module",
   "files": [
-    "common-bricks.json"
+    "common-bricks.json",
+    "deprecated-bricks.json"
   ],
   "exports": {
     ".": "./common-bricks.json",
