--- a/bricks/advanced/package.json
+++ b/bricks/advanced/package.json
@@ -62,7 +62,8 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "0.0.0-experimental-ee8509801-20230117",
-    "react-grid-layout": "^1.4.3"
+    "react-grid-layout": "^1.4.3",
+    "react-i18next": "^12.3.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.9",
