--- a/bricks/data-view/package.json
+++ b/bricks/data-view/package.json
@@ -50,6 +50,7 @@
     "d3-geo": "^3.1.1",
     "d3-hierarchy": "^3.1.2",
     "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-i18next": "^12.3.1",
     "resize-observer-polyfill": "^1.5.1",
     "three": "^0.150.1"
   },
