--- a/bricks/form-platform/package.json
+++ b/bricks/form-platform/package.json
@@ -40,7 +40,8 @@
     "@next-core/react-element": "^1.0.35",
     "@next-core/theme": "^1.5.4",
     "@next-shared/story": "^0.0.4",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-i18next": "^12.3.1"
   },
   "devDependencies": {
     "@next-api-sdk/cmdb-sdk": "^1.1.1",
