--- a/bricks/form/package.json
+++ b/bricks/form/package.json
@@ -56,6 +56,7 @@
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "0.0.0-experimental-ee8509801-20230117",
+    "react-i18next": "^12.3.1",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
