--- a/bricks/nav/package.json
+++ b/bricks/nav/package.json
@@ -54,6 +54,7 @@
     "lodash": "^4.17.21",
     "react": "0.0.0-experimental-ee8509801-20230117",
     "react-dom": "0.0.0-experimental-ee8509801-20230117",
+    "react-i18next": "^12.3.1",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
