--- a/bricks/presentational/package.json
+++ b/bricks/presentational/package.json
@@ -48,6 +48,7 @@
     "prism-react-renderer": "^2.0.6",
     "prismjs": "^1.29.0",
     "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-i18next": "^12.3.1",
     "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
