--- a/bricks/recent-history/package.json
+++ b/bricks/recent-history/package.json
@@ -41,7 +41,8 @@
     "@next-core/theme": "^1.5.4",
     "@next-shared/general": "^0.10.5",
     "mnemonist": "^0.39.5",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-i18next": "^12.3.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.9",
