--- a/bricks/visual-builder/package.json
+++ b/bricks/visual-builder/package.json
@@ -57,7 +57,8 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "path-to-regexp": "^6.2.2",
-    "react": "0.0.0-experimental-ee8509801-20230117"
+    "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-i18next": "^12.3.1"
   },
   "devDependencies": {
     "@next-core/build-next-bricks": "^1.23.9",
