--- a/bricks/vs/package.json
+++ b/bricks/vs/package.json
@@ -69,6 +69,7 @@
     "monaco-editor": "^0.50.0",
     "monaco-editor-webpack-plugin": "^7.1.0",
     "react": "0.0.0-experimental-ee8509801-20230117",
+    "react-i18next": "^12.3.1",
     "yaml": "^2.5.1"
   },
   "devDependencies": {
