test(): update test after upgrade jest to v30

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "size-check": "npx start-server-and-test serve:size-check http-get://localhost:8081/ cypress:run:no-record",
     "size-check:ci": "npx start-server-and-test serve:size-check http-get://localhost:8081/ cypress:run",
     "lint-staged": "lint-staged",
-    "yo": "yo"
+    "yo": "yo",
+    "postinstall": "patch-package"
   },
   "browserslist": {
     "development": [
@@ -81,6 +82,8 @@
     "jest-canvas-mock": "^2.5.2",
     "lerna": "^8.1.7",
     "lint-staged": "^15.2.10",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2"
   },
